# monitoreal-aqa-show-case

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: allure-pages.yml  ci.yml
docker/: entrypoint.sh
docs/: api_contract.yaml  bug_report_examples.md  risk_matrix.md  test_strategy.md
src/mock_server/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
src/mock_server/routers/: actions.py  archive.py  cameras.py  detections.py  events.py  media.py  rules.py  ui.py
src/mock_server/services/: actions_runner.py  retention.py  rules_engine.py
src/mock_server/static/css/: style.css
src/mock_server/templates/: archive.html  base.html  login.html  rules.html
tests/: conftest.py  factories.py
tests/api/: test_actions.py  test_archive.py  test_detections.py  test_retention.py  test_rules.py
tests/contract/: test_jsonschema_responses.py  test_openapi_schemathesis.py
tests/e2e/: test_multiple_actions_per_rule.py
tests/ui/: conftest.py  test_archive_page.py  test_login.py  test_rules_page.py
